@@ -28,12 +28,6 @@ Boston, MA 02110-1301, USA.  */
  * ISO C Standard:  7.15  Variable arguments  <stdarg.h>
  */
 
-#ifndef _INC_STDARG
-#define _INC_STDARG
-#ifndef _WIN32
-#error Only Win32 target is supported!
-#endif
-
 #ifndef _STDARG_H
 #ifndef _ANSI_STDARG_H_
 #ifndef __need___va_list
@@ -138,16 +132,6 @@ typedef __gnuc_va_list va_list;
 #endif /* not _ANSI_STDARG_H_ */
 #endif /* not _STDARG_H */
 
-#include <vadefs.h>
+/* include mingw stuff */
+#include <_mingw_stdarg.h>
 
-#ifndef va_start
-#define va_start _crt_va_start
-#endif
-#ifndef va_arg
-#define va_arg _crt_va_arg
-#endif
-#ifndef va_end
-#define va_end _crt_va_end
-#endif
-
-#endif
